--- a/nutzfw-web-flowable/src/main/webapp/static/flowable-modeler/editor-app/configuration/properties/expansion-popup.html
+++ b/nutzfw-web-flowable/src/main/webapp/static/flowable-modeler/editor-app/configuration/properties/expansion-popup.html
@@ -317,7 +317,17 @@
                             <div ng-show='activeTab==2'>
                                 <div class="form-group clearfix">
                                     <div class="form-group">
-                                        <label class="ng-binding">回退类型</label>
+                                        <label class="ng-binding">连线回退(驳回)--<i>(推荐)</i></label>
+                                        <select class="form-control ng-pristine ng-untouched ng-valid"
+                                                ng-change="updateCallBackTypeSelection()"
+                                                ng-model="expansionProperties.connectionCallBack">
+                                            <option value="true">允许</option>
+                                            <option value="false">不允许</option>
+                                        </select>
+                                        <p>变量:turnDown</p>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="ng-binding">回退类型--<i>(不通过连线进行回退-不推荐)</i></label>
                                         <select class="form-control ng-pristine ng-untouched ng-valid"
                                                 ng-change="updateCallBackTypeSelection()"
                                                 ng-model="expansionProperties.callBackType">
