--- a/nutzfw-web-flowable/src/main/webapp/static/flowable-modeler/editor-app/configuration/properties/expansion-popup.html
+++ b/nutzfw-web-flowable/src/main/webapp/static/flowable-modeler/editor-app/configuration/properties/expansion-popup.html
@@ -69,7 +69,7 @@
             <div class="modal-header">
                 <button aria-hidden="true" class="close" data-dismiss="modal" ng-click="close()" type="button">&times;
                 </button>
-                <h3> NutzFw扩展步骤属性-{{title}}-({{selectedShape.resourceId}})</h3>
+                <h3>审核配置-{{title}}-({{selectedShape.resourceId}})</h3>
             </div>
             <div class="modal-body">
                 <div class="detail-group clearfix">
