--- a/nutzfw-web-flowable/src/main/webapp/static/flowable-modeler/editor-app/configuration/properties/expansion-popup.html
+++ b/nutzfw-web-flowable/src/main/webapp/static/flowable-modeler/editor-app/configuration/properties/expansion-popup.html
@@ -209,6 +209,7 @@
                                             <option value="SINGLE_USER">分配给指定用户</option>
                                             <option value="MULTIPLE_USERS">多个候选用户</option>
                                             <option value="JAVA_BEAN_ASSIGNMENT">由JavaIocBean人员选择器选取审核人员或组</option>
+                                            <option value="FREE_CHOICE">自由选择</option>
                                         </select>
                                     </div>
                                     <div class="form-group clearfix"
